# ink_contract_size_benchmark

./: README.md
benchmark/: index.ts  maths.csv  output-debug.csv  output-release.csv  package-lock.json  package.json
contracts/btreemap x2/src/: lib.rs
contracts/btreemap/src/: lib.rs
contracts/btreeset and btreemap/src/: lib.rs
contracts/btreeset x2/src/: lib.rs
contracts/btreeset/src/: lib.rs
contracts/empty/: Cargo.toml
contracts/empty/src/: lib.rs
contracts/mapping containing btreemap/src/: lib.rs
contracts/mapping containing btreeset/src/: lib.rs
contracts/mapping containing vec/src/: lib.rs
contracts/mapping x2/src/: lib.rs
contracts/mapping/src/: lib.rs
contracts/vec/: Cargo.toml
contracts/vec x2/src/: lib.rs
contracts/vec/src/: lib.rs
