[package]
name = "contract"
version = "0.3.0"
authors = ["George Oastler george@prosopo.io"]
edition = "2021"

[dependencies]
ink = { version = "4.2" , default-features = false }

[lib]
name = "common"
path = "src/lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []