[package]
name = "contract"
version = "0.3.0"
authors = ["George Oastler"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev="9ca19c462d5f5d1572ddce595d2698207241fd4a", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "contract"
path = "src/lib.rs"

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []